--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "babel src -d dist",
-    "start": "node script.js"
+    "start": "nodemon script.js"
   },
   "keywords": [],
   "author": "",
@@ -15,7 +14,6 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
-    "mongoose": "^8.5.0",
-    "nodemon": "^3.1.4"
+    "mongoose": "^8.5.0"
   }
 }
